<resources>
    <string name="app_name">Ferrepronto</string>
    <string name="Usuario_o_correo">Usuario o Correo</string>
    <string name="Contrasena">Contraseña</string>
    <string name="Entrar">Entrar</string>
    <string name="noRegistrarse">¿Aun no tienes una cuenta?</string>
    <string name="Registrarse">Regístrate ahora</string>
    <string name="Cerrar_sesion">Cerrar sesion</string>
    <string name="Nombre_usuario">Nombre de usuario</string>
    <string name="Comprar">Comprar</string>
    <string name="Contacto">Contacto</string>
    <string name="Acerca_de">Acerca de</string>
    <string name="Ubicacion">Ubicacion</string>
    <string name="carrito">carrito</string>
    <string name="regresar">Regresar</string>
    <string name="Carpinteria">Carpinteria</string>
    <string name="Jardineria">Jardineria</string>
    <string name="Electricidad">Electricidad</string>
    <string name="Plomeria">Plomeria</string>
    <string name="Tornilleria">Tornilleria</string>
    <string name="Construccion">constr</string>
    <string name="Pinturas">Pinturas</string>
    <string name="Ubicacion1">Direccion: Av México - Puebla 46,Barrio del Perdón, 72700 San Juan Cuautlancingo, Pue.</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="contacto">Contacto</string>
    <string name="telefono">Telefono</string>
    <string name="correo">Correo</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="telefonolocal">222 285 44 18</string>
    <string name="telefonocelular">222 426 63 01</string>
    <string name="correohotmail">ferreteriasanjuan1@hotmail.com</string>
    <string name="correogmail">ferreteriasanjuan1@gmail.com</string>
    <string name="contrasenaolvidada">Contraseña olvidada</string>
    <string name="default_web_client_id">510212950422-hgqv99rdbic97nhisu8hcmq9fahuisar.apps.googleusercontent.com</string>

</resources>