<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/Login"
        android:layout_width="122dp"
        android:layout_height="48dp"
        android:layout_marginStart="135dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="88dp"
        android:backgroundTint="@color/Color_truper"
        android:text="Entrar"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Olvido_contrasena"
        android:layout_width="170dp"
        android:layout_height="57dp"
        android:layout_marginStart="111dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="96dp"
        android:backgroundTint="@color/Color_truper"
        android:text="@string/Registrarse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/Correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="91dp"
        android:layout_marginEnd="91dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="Usuario"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/Contrasena"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/Contrasena"
        android:layout_width="211dp"
        android:layout_height="47dp"
        android:layout_marginStart="91dp"
        android:layout_marginEnd="91dp"
        android:layout_marginBottom="68dp"
        android:ems="10"
        android:hint="@string/Contrasena"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/Login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginEnd="111dp"
        android:layout_marginBottom="12dp"
        android:text="@string/noRegistrarse"
        app:layout_constraintBottom_toTopOf="@+id/Olvido_contrasena"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        app:layout_constraintBottom_toTopOf="@+id/Correo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ferrepronto_logo" />


</androidx.constraintlayout.widget.ConstraintLayout>